--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p class="text-gray-700 font-bold mt-4">cursoinfluencerstudio</p>
             </div>
     
-            <section class="mt-4 flex flex-col justify-center items-center">
+            <section class="mt-4 flex flex-col justify-center items-center text-center">
                 <h2 class="text-gray-700 text-lg font-bold sm:text-2xl sm:font-normal">
                     Nosso Curso e 100% digital pelo CLOSE FRIENDS         
                 </h2>
